fixing overflow

--- a/animations.css
+++ b/animations.css
@@ -80,12 +80,6 @@ slideUp
 ==============================================
 */
 
-/* Enable hardware acceleration to fix laggy transitions */
--webkit-transform: translateZ(0);
--moz-transform: translateZ(0);
--ms-transform: translateZ(0);
--o-transform: translateZ(0);
-transform: translateZ(0);
 .slideUp{
 	animation-name: slideUp;
 	-webkit-animation-name: slideUp;	
@@ -97,6 +91,7 @@ transform: translateZ(0);
 	-webkit-animation-timing-function: ease;
 
 	visibility: visible !important;	
+	overflow: hidden;
 
 }
 
